--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@particle-network/auth-core": "^1.3.6",
+    "@particle-network/auth-core-modal": "^1.3.9",
+    "@rainbow-me/rainbowkit": "^2.0.2",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.4.0",
+    "@tanstack/react-query": "^5.28.4",
+    "ethers": "^5",
+    "jiti": "^1.21.0",
+    "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "siwe": "^2",
+    "viem": "2.x",
+    "wagmi": "^2.5.11"
   },
   "devDependencies": {
     "typescript": "^5",
